# serde-ini-spanned

./: .typos.toml  Cargo.toml  README.md  taskfile.yaml
src/: lib.rs  parse.rs  spanned.rs  value.rs
test-data/: cfgparser.3.ini
