[package]
name = "serde-ini-spanned"
version = "0.0.1"
edition = "2024"

publish = true
authors = ["romnn <contact@romnn.com>"]
description = "INI configuration file deserialization similar to Python's configparser"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/serde-ini-spanned"
documentation = "https://docs.rs/serde-ini-spanned"
repository = "https://github.com/romnn/serde-ini-spanned"
categories = ["encoding", "parser-implementations"]
keywords = [
  "parser",
  "ini",
  "cfg",
  "serde"
]
exclude = [
  ".typos.toml",
  ".ignore",
  ".bumpversion.toml",
  "taskfile.yaml",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = "1"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }

# manual parsing
aho-corasick = "1"

# diagnostics
codespan-reporting = "0"

# # optional: pest parser
# pest = "2"
# pest_derive = "2"
# # optional: nom parser
# nom = "7"

[dev-dependencies]
color-eyre = "0"
similar-asserts = "1"
indoc = "2"
unindent = "0"

# pest-test = "0"
# pest-test-gen = "0"
